# google-ads-mcp

./: .env.example  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.es.md  README.fr.md  README.ko.md  README.md  README.nl.md  README.ru.md  README.zh.md  claude_desktop_config.example.json  pyproject.toml
.github/workflows/: ci.yml
ads_mcp/: __init__.py  auth.py  coordinator.py  server.py  utils.py
ads_mcp/tools/: __init__.py  audit.py  core.py  docs.py  write.py
docs/: ARCHITECTURE.md  SERVICES.md
scripts/: cli.py  validate.py
tests/: test_utils.py
wiki/: Connecting-to-Google-Ads-API.md  Home.md  Installation.md  Publishing-to-PyPI.md  Tool-Reference.md
